--- a/kubernetes/kube-config.yml
+++ b/kubernetes/kube-config.yml
@@ -22,7 +22,7 @@ metadata:
 spec:
   containers:
     - name: ubuntu-ocr
-      image: kkbankol/ubuntu-ocr
+      image: kkbankol/ubuntu-ocr:tess4
       imagePullPolicy: Always
       stdin: true
       tty: true
